--- a/non-final.ipynb
+++ b/non-final.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "09795d93",
+   "id": "ca6dfb40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "04fbabea",
+   "id": "325f0aa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dfd09a3c",
+   "id": "feaad0f7",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "56e0724a",
+   "id": "ea3c4a19",
    "metadata": {
     "scrolled": true
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "47571079",
+   "id": "fe86b7d4",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d10a92be",
+   "id": "0eda3dbd",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ad812ed1",
+   "id": "0879edc9",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4e544c10",
+   "id": "8e48ed9b",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e8241fe0",
+   "id": "174e26fc",
    "metadata": {},
    "outputs": [
     {
@@ -429,9 +429,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5e4b8da",
+   "metadata": {},
+   "source": [
+    "Something looks off about BMI. There seems to be one very specific value that throws off the entire, otherwise-normally-distributed, histogram."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "52a0d6cf",
+   "id": "18206dc2",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "65ab165a",
+   "id": "6d1d6c41",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "75c64647",
+   "id": "5ba3fcda",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1141308f",
+   "id": "0282ee4f",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d224b9ed",
+   "id": "937f4edb",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd777cee",
+   "id": "ee49a3c4",
    "metadata": {},
    "source": [
     "Things to do:\n",
@@ -594,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f8c906b1",
+   "id": "45a86cd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "34394cd7",
+   "id": "c2b810ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c3eef79e",
+   "id": "887f92fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "77b3a7fd",
+   "id": "148515fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "05af8dda",
+   "id": "abb35d6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "d6f4c6ad",
+   "id": "0c538333",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4d6b7ee1",
+   "id": "7cff0cae",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c8feae",
+   "id": "e4a4677b",
    "metadata": {},
    "source": [
     "We are left with 99.48% of the data"
@@ -704,7 +712,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e01e3c48",
+   "id": "b5fd465a",
    "metadata": {},
    "source": [
     "***Note! Regarding blood_glucose_level***\n",
@@ -718,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "25385cf5",
+   "id": "909f6ee7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2292cdba",
+   "id": "ce1ef842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "efde019d",
+   "id": "56b53059",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "9d6fd92b",
+   "id": "35e716b3",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2458d686",
+   "id": "2b5843be",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b660094e",
+   "id": "de99f55e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "d44fb644",
+   "id": "c5fbc802",
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "6d644f1a",
+   "id": "3d487de7",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "5a1f3288",
+   "id": "4c6f954c",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "62dbf423",
+   "id": "88bff501",
    "metadata": {},
    "outputs": [
     {
@@ -1063,9 +1071,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14f5fd48",
+   "metadata": {},
+   "source": [
+    "I'm starting to not like pairplots... I don't really need a repeat of histograms, and there's a lot of dead whitespace that forces me to scroll to see how variables interact. Will probably delete this and just do scatterplots using itertools moving forward."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "c8886b4a",
+   "id": "a4088873",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e842ba38",
+   "id": "b90c1c1f",
    "metadata": {},
    "source": [
     "Stats Tests to Run:\n",
@@ -1119,7 +1135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb10f194",
+   "id": "6b046afe",
    "metadata": {},
    "source": [
     "H0 : No multicollinearity between HbA1C and glucose\n",
@@ -1130,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "0f38beb4",
+   "id": "7891a843",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c31448d2",
+   "id": "4290a1ab",
    "metadata": {},
    "source": [
     "H0 : No multicollinearity between age and bmi\n",
@@ -1163,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "95143ca7",
+   "id": "0aa096ac",
    "metadata": {
     "scrolled": true
    },
@@ -1187,7 +1203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68297f54",
+   "id": "97d50e04",
    "metadata": {},
    "source": [
     "H0 : No relation between gender and diabetes\n",
@@ -1198,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "0676ad34",
+   "id": "7663df9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "f759e40e",
+   "id": "da2d6574",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "b8b57d03",
+   "id": "888690c6",
    "metadata": {
     "scrolled": true
    },
@@ -1259,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b317fc",
+   "id": "bb0af53f",
    "metadata": {},
    "source": [
     "H0 : No relation between hypertension and diabetes\n",
@@ -1270,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "ede63581",
+   "id": "c29d3373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "315fde5e",
+   "id": "fd7ce06e",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "2b4a4fea",
+   "id": "60af6c34",
    "metadata": {},
    "outputs": [
     {
@@ -1324,12 +1340,12 @@
     }
    ],
    "source": [
-    "chi2, p"
+    "chi2, p # Null hypothesis is rejected"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7b4aa880",
+   "id": "80e6c414",
    "metadata": {},
    "source": [
     "H0 : No relation between heart_disease and diabetes\n",
@@ -1340,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "c4d52ee5",
+   "id": "27bff317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "eb1d2901",
+   "id": "10002c65",
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "deb08941",
+   "id": "dc9275ed",
    "metadata": {},
    "outputs": [
     {
@@ -1394,12 +1410,12 @@
     }
    ],
    "source": [
-    "chi2, p"
+    "chi2, p # Null hypothesis is rejected"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5d1e357c",
+   "id": "465627cd",
    "metadata": {},
    "source": [
     "#### Now for comparison of means"
@@ -1407,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "551456f2",
+   "id": "ebbafb2d",
    "metadata": {},
    "source": [
     "age, bmi, hb1ac, glucose"
@@ -1415,7 +1431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e893264c",
+   "id": "b2a363df",
    "metadata": {},
    "source": [
     "#### Age"
@@ -1424,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "e216fbb3",
+   "id": "c40f130d",
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "e86a6e8c",
+   "id": "7bb356fb",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "54316411",
+   "id": "2d557a07",
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "50059edb",
+   "id": "3d855f2e",
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "7621c522",
+   "id": "863117f2",
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e04cf842",
+   "id": "aaf795ed",
    "metadata": {},
    "source": [
     "#### BMI"
@@ -1537,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "9ebefd18",
+   "id": "f86c54e2",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "f002de4d",
+   "id": "06424773",
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "df457a4c",
+   "id": "279245d2",
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc23a51",
+   "id": "c99d1e3a",
    "metadata": {},
    "source": [
     "#### HbA1c"
@@ -1608,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "a3c4630d",
+   "id": "507dad57",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "88fac2b2",
+   "id": "39cbe9f5",
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "081f45b4",
+   "id": "07eebc76",
    "metadata": {},
    "outputs": [
     {
@@ -1670,7 +1686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "307894b2",
+   "id": "8e502867",
    "metadata": {},
    "source": [
     "#### Blood glucose"
@@ -1679,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "f54f770c",
+   "id": "90e79ff6",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "6c8629c3",
+   "id": "bf80261e",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "26b35af9",
+   "id": "4973429c",
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c18c6ca",
+   "id": "0b9746f7",
    "metadata": {},
    "source": [
     "### Exploration Summary\n",
@@ -1757,13 +1773,29 @@
     "|BMI| 26.6 | 32.4 |\n",
     "|HbA1c| 5.4 | 6.9 |\n",
     "|Blood Glucose|133|195|\n",
-    "\n"
+    "\n",
+    "- All variables are correlated with diabetes, with HbA1c being the strongest (T-stat = -88), just barely beating Age (-85).\n",
+    "\n",
+    "| Variable | Chi$^2$ | P-Value |\n",
+    "| --- | --- | --- |\n",
+    "| Gender | 80 | 3.92 $\\times$ 10$^{-19}$ |\n",
+    "| Hypertension | 1625 | 0 |\n",
+    "| Heart Disease | 1252 | 2.42 $\\times$ 10$^{274}$ |\n",
+    "\n",
+    "| Variable | T-Statistic | P-Value | \n",
+    "| --- | --- | --- |\n",
+    "| Age | -85 | 0 |\n",
+    "| BMI | -50 | 0 |\n",
+    "| HbA1C | -88 | 0 |\n",
+    "| Blood glucose | -66 | 0 |\n",
+    "\n",
+    "We will moving forward will all variables when we head into modeling."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "601973df",
+   "id": "2a53c759",
    "metadata": {},
    "outputs": [],
    "source": []
